# luceo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature-template.md
assets/: milan512.hdr
assets/shaders/: aperture_mask.cs.slang  blit.cs.slang  compute_psf.cs.slang  freq_multiply.cs.slang  fs_triangle.px.slang  fs_triangle.vx.slang  gen_gauss_kernel.cs.slang  horizontal_fft.cs.slang  prepare_fft.cs.slang  recombine_rgb.cs.slang  test.px.slang  test.vx.slang  vertical_fft.cs.slang
assets/shaders/shared/: fft_common.slang
scripts/: compile_shaders.py
scripts/cmake/: shader_compilation.cmake
src/: main.cpp
src/renderer/: renderer.cpp  renderer.hpp
src/window/: window.cpp  window.hpp
